2007-01-29  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: MdiClient should always be added last, it should
	never Dock:Fill under other controls.  [Fixes a part of bug #80223]

2007-01-20  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Remove special loop for Dock.Fill and handle
	it with the other docking code.  [Fixes bug #80227]

2007-01-09  Jonathan Pobst  <monkey@jpobst.com>

	* DefaultLayout.cs: Use PreferredSize for non-Anchor/Dock controls. (2.0)
	Change a SetBounds to SetImplicitBounds.

2007-01-07  Jonathan Pobst  <monkey@jpobst.com>

	* ArrangedElementCollection.cs: Make list internal.

2006-12-28  Chris Toshok  <toshok@ximian.com>

	* DefaultLayout.cs: split out the various parts (docking,
	anchoring) into separate methods.  make use of the
	Control.ControlLayoutType property, as well as
	Control.VisibleInternal (and fix a couple of unit tests which were
	broken due to use of Visible here.)

2006-12-25  Chris Toshok  <toshok@ximian.com>

	* DefaultLayout.cs: invert the tests for anchoring to make the
	code a little more compact.

2006-12-25  Chris Toshok  <toshok@ximian.com>

	* DefaultLayout.cs: remove references to dist_left and dist_top.
	just use left and top instead.

2006-12-23  Chris Toshok  <toshok@ximian.com>

	* TableLayoutSettingsTypeConverter.cs: new file, a skeleton.

2006-12-23  Chris Toshok  <toshok@ximian.com>

	* DefaultLayout.cs: include this in 1.1, and make use of
	SetImplicitBounds like the Control.PerformLayout code does.

2006-12-06  Chris Toshok  <toshok@ximian.com>

	* DefaultLayout.cs: make Control.child_controls private.  switch
	all uses over to Control.Controls.

2006-12-04  Chris Toshok  <toshok@ximian.com>

	* ArrangedElementCollection.cs: fix up corcompare for this file.
	we need to make all the interface methods explicit, not public,
	and add internal methods that can be called from the subclasses
	(we also call them from the explicit implementations.)
